# envs

./: .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  README.md  release-plz.toml
.github/workflows/: ci.yml  homebrew-bump.yml  release-plz.yml  release.yml
crates/envs-cli/: CHANGELOG.md  Cargo.toml
crates/envs-cli/src/: client.rs  error.rs  exec.rs  main.rs  manifest.rs
crates/envs-cli/src/commands/: audit.rs  completions.rs  daemon.rs  doctor.rs  init.rs  mod.rs  project.rs  registry.rs  rules.rs  run.rs
crates/envs-daemon/: CHANGELOG.md  Cargo.toml
crates/envs-daemon/src/: audit.rs  binary.rs  cache.rs  config.rs  discovery.rs  error.rs  handlers.rs  helper.rs  llm.rs  main.rs  peer.rs  persistence.rs  rbw.rs  registry.rs  rule.rs  server.rs
crates/envs-daemon/tests/: it_coverage.rs  it_go_compat.rs  it_resolve.rs
crates/envs-daemon/tests/common/: mod.rs
crates/envs-daemon/tests/fixtures/: rbw-shim.sh
crates/envs-prompt/: CHANGELOG.md  Cargo.toml
crates/envs-prompt/src/: app.rs  auth.rs  client.rs  dialog.rs  main.rs  rbw.rs
crates/envs-proto/: CHANGELOG.md  Cargo.toml
crates/envs-proto/src/: lib.rs
docs/: ARCHITECTURE.md  RELEASE.md  THREAT-MODEL.md  V03-V04-ROADMAP.md
dogfood-output/: report.md  spec-audit.md
packaging/: com.fgribreau.envsd.plist.template
scripts/: codesign.sh  smoke.sh
specs/: spec.md
tests/fixtures/printenv-go/: main.go
tests/integration/: Dockerfile  README.md  docker-compose.test.yml  pinentry-stub.sh  register-account.js  run-tests.sh
