[workspace]
resolver = "2"
members = [
    "crates/envs-proto",
    "crates/envs-cli",
    "crates/envs-daemon",
    "crates/envs-prompt",
]

[workspace.package]
edition = "2021"
rust-version = "1.83"
license = "MIT"
authors = ["François-Guillaume Ribreau <fg@france-nuage.fr>"]
repository = "https://github.com/fgribreau/envs"
homepage = "https://github.com/fgribreau/envs"
version = "0.1.0"

[workspace.lints.clippy]
# Allowed by design — see comments at the relevant sites.
#
# `large_enum_variant`: HelperEvent::NewRequest(PromptRequest) is intentionally
# rich (it carries the full popup state). Boxing would add an indirection per
# event for marginal memory savings on a low-traffic path.
large_enum_variant = "allow"
# `too_many_arguments`: Resolve/Rule::new are spec-driven; refactoring into a
# struct for the sake of clippy would just shift the verbosity to call sites.
too_many_arguments = "allow"

[workspace.dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "sync", "process", "signal", "time", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
toml = "0.8"
clap = { version = "4.5", features = ["derive", "env"] }
nix = { version = "0.29", features = ["process", "user", "socket", "fs", "signal"] }
libc = "0.2"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1.8", features = ["zeroize_derive"] }
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
ulid = { version = "1.1", features = ["serde"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
