[package]
name = "envs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "envs — Lulu-style firewall for environment variables (CLI wrapper)"

[[bin]]
name = "envs"
path = "src/main.rs"

[dependencies]
envs-proto = { path = "../envs-proto" }
clap = { workspace = true }
clap_complete = "4.5"
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = { workspace = true }
dirs = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
libc = { workspace = true }
hmac = { workspace = true }
