[package]
name = "envs-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "envsd — long-running daemon for envs (UDS server, cache, rbw client)"

[lints]
workspace = true

[[bin]]
name = "envsd"
path = "src/main.rs"

[dependencies]
envs-proto = { path = "../envs-proto" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
secrecy = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
rand = { workspace = true }
ulid = { workspace = true }
dirs = { workspace = true }
nix = { workspace = true }
libc = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3.13"
