[package]
name = "envs-prompt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "envs-prompt — popup helper for envsd daemon (v0.1: stub mode only)"

[lints]
workspace = true

[[bin]]
name = "envs-prompt"
path = "src/main.rs"

[dependencies]
envs-proto = { path = "../envs-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = [
    "NSString", "NSError", "NSArray", "NSObject", "NSDate", "NSRunLoop",
    "NSValue", "NSGeometry", "NSDictionary", "NSEnumerator", "NSTimer",
] }
objc2-local-authentication = { version = "0.2", features = ["LAContext", "block2"] }
objc2-app-kit = { version = "0.2", features = [
    "NSAlert", "NSApplication", "NSResponder", "NSView", "NSWindow",
    "NSButton", "NSText", "NSTextField", "NSStackView", "NSLayoutConstraint",
    "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSImage",
    "NSCell", "NSControl", "NSGraphics", "NSFont",
    "NSPopUpButton", "NSMenu", "NSMenuItem", "NSEvent",
    "NSUserInterfaceLayout",
] }
block2 = "0.5"
